# clora-test

./: README.md  clora_chair_hotel.py  notebook.ipynb  pipeline_clora.py  pyproject.toml  run_clora_chair_hotel.bat  run_clora_chair_hotel.sh  utils.py
